--- a/package.json
+++ b/package.json
@@ -6,13 +6,31 @@
   "main": "app.js",
   "license": "Apache-2.0",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/IBM/node-hello-world-minimal.git"
+    "type": "git",
+    "url": "https://github.com/IBM/node-hello-world-minimal.git"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jest": "^29.7.0",
+    "mocha": "^10.7.0",
+    "run": "^1.5.0"
+  },
+  "devDependencies": {
+    "jest-junit": "^16.0.0",
+    "supertest": "^7.0.0"
+  },
+
+  "jest": {
+    "reporters": [
+      "default",
+      ["jest-junit", {
+        "outputDirectory": "./test-results",
+        "outputName": "junit.xml"
+      }]
+    ]
   }
 }
